Java 17 compat